<resources>
    <string name="commit">commit</string>
    <string name="add">add</string>
    <string name="update">update</string>
    <string name="required">*required</string>

    <string name="app_name" translatable="false">IAM</string>

    <string name="title_activity_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="licTradNum">ID/VID</string>
    <string name="cid">Serial Number</string>
    <string name="name">Name</string>
    <string name="balance">Balance</string>
    <string name="phone1">Phone 1</string>
    <string name="phone2">Phone 2</string>
    <string name="cellular">Cellular</string>
    <string name="fax">Fax</string>
    <string name="email">Email</string>
    <string name="billing_address">Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="salesman">SalesMan</string>
    <string name="comments">Comments</string>
    <string name="private_str">private</string>
    <string name="company">company</string>
    <string name="employe">employe</string>
    <string name="view_more">View more</string>

    <string name="items">Items</string>
    <string name="doc_num">Doc Number</string>
    <string name="doc_date">Doc Date</string>
    <string name="doc_due_date">Doc Due Date</string>
    <string name="doc_valid_until_date">Valid Until</string>
    <string name="supply_date">Supply Date</string>
    <string name="total_before_discount">Total Before Discount</string>
    <string name="discount">Discount</string>
    <string name="vat">VAT</string>
    <string name="total">Total</string>
    <string name="code">Code</string>
    <string name="price">Price</string>
    <string name="paid_sum">Paid Sum</string>
    <string name="need_to_pay">Need To Pay</string>

    <string name="description">Description</string>
    <string name="total_price">Total Price</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="units">Units</string>
    <string name="quantity">Quantity</string>
    <string name="price_per_quantity">Price per Quantity</string>
    <string name="details">Details</string>


    <string name="hint_address_name">Address Name</string>
    <string name="hint_city">City</string>
    <string name="hint_street">Street</string>
    <string name="hint_street_num">Number</string>
    <string name="hint_apartment">Apartment</string>
    <string name="hint_block">Block</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">sign in</string>
    <string name="customers">Customers</string>
    <string name="customer_info">Customer Info</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="show_open_only">show open only</string>


    <string name="error_process_already_running_wait">"Process already working process, please wait…"</string>
    <string name="error_some_field_not_valid">Error: some fields are not valid</string>

    <string name="error_address_name_empty">You must enter address description</string>
    <string name="error_empty_field">You must fill this field</string>


    <string name="invoices">Invoices</string>
    <string name="orders">Orders</string>
    <string name="delivery_notes">Delivery Notes</string>
    <string name="quotations">Quotations</string>
    <string name="credit_notes">Credit Notes</string>
    <string name="receipts">Receipts</string>

    <string name="invoice">Invoice</string>
    <string name="order">Order</string>
    <string name="delivery_note">Delivery Note</string>
    <string name="quotation">Quotation</string>
    <string name="credit_note">Credit Note</string>
    <string name="receipt">Receipt</string>
    <string name="journal">Journal</string>
    <string name="other">Other</string>
    <string name="add_item">Add Item</string>
    <string name="discount_percent">discount percent</string>
    <string name="cancel_document">CANCEL DOCUMENT</string>
</resources>
