<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        tools:context="com.iam_client.ui.main.documents.DocItemView">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/numTextField"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"
                tools:text="55." />

        <TextView
                android:id="@+id/itemCodeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"
                tools:text="MC1D" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:hint="@string/description"
                app:boxStrokeColor="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    tools:text=" fd d הפרשי מחירים" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/total_price"
                app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/totalTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="16sp"
                    tools:text="13853.58ILS" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/measuresLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:hint="@string/height"
                app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="2"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    tools:text="135.2211M" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:hint="@string/width"
                app:boxBackgroundColor="@android:color/transparent"
               >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/widthTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:backgroundTint="@null"
                    android:maxLines="2"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    tools:text="135.22M" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/length"
                app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lengthTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:maxLines="2"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    tools:text="135.22M" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:hint="@string/units"
                app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/unitTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:maxLines="2"
                    android:textSize="16sp"
                    tools:text="13" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:hint="@string/quantity"
                app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantityTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:maxLines="2"
                    android:textSize="16sp"
                    tools:text="13335.222" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:hint="@string/price_per_quantity"
                app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceQuantityTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:maxLines="2"
                    android:textSize="16sp"
                    tools:text="1335.222ILS" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:hint="@string/details"
                app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailsTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    tools:text="short details about the item" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/commentsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:hint="@string/comments"
                app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentsTextField"
                    style="@style/TextViewFieldNoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLines="2"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    tools:text="very very long comment about the item and manufacturer details" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <View style="@style/Divider" />
</LinearLayout>


