<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.main.documents.EditDocItemPropertiesDialog">

    <data>

        <variable
                name="viewModel"
                type="com.iam_client.viewModels.main.documents.EditDocItemPropertiedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="20dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                            style="@style/IconsStyle"
                            android:src="@drawable/account_circle" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:hint="Serial Number"
                            app:boxBackgroundColor="@android:color/transparent">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/sn_text"
                                style="@style/TextViewFieldNoEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:text="@{viewModel.itemCode}"
                                tools:text="MC1D" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                            style="@style/IconsStyle"
                            android:src="@drawable/account_circle" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            app:boxBackgroundColor="@android:color/transparent">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/descriptionTextField"
                                style="@style/TextViewField"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.descriptionEditable}"
                                tools:text="Milano Super Door" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                        android:id="@+id/fields_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>

                <View style="@style/Divider" />

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/quantity"
                        app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/quantityTextField"
                            style="@style/TextViewField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number|numberDecimal"
                            android:text="@={viewModel.quantityEditable}"
                            tools:text="10.55" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/price_per_quantity"
                        app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pricePerQuantityTextField"
                            style="@style/TextViewField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number|numberDecimal"
                            android:text="@={viewModel.pricePerQuantityEditable}"
                            tools:text="10.55" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/discount_percent"
                        app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/discountPercentTextField"
                            style="@style/TextViewField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal|number"
                            android:text="@={viewModel.discountPercentEditable}"
                            tools:text="5%" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/priceTextField"
                            style="@style/TextViewField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number|numberDecimal"
                            android:text="@={viewModel.totalPriceEditable}"
                            tools:text="10.55" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/details"
                        app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/detailsTextField"
                            style="@style/TextViewField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.detailsEditable}"
                            tools:text="Milano Super Door" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/comments"
                        app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/commentsTextField"
                            style="@style/TextViewField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.commentsEditable}"
                            tools:text="bla bla" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                        android:id="@+id/commitButton"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="5dp"
                        android:onClick="@{(v)->viewModel.onConfirmClicked()}"
                        android:text="@string/commit"
                        android:textColor="@color/colorDeepBlue"
                        android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>